# bridge-sim

./: .codeclimate.yml  .dockerignore  .filepath-shortening-map.txt  .gitattributes  .gitignore  CHANGELOG.MD  CHANGELOG.org  LICENSE  Pipfile  README.org  TODOs.org  bayes.py  build.sh  classify.ipynb  cli.sh  crack.sh  debug.tcl  docs.sh  example.py  example.tcl  get_min_max.py  model-template-3d.tcl  mypy.ini  normal_load.py  og-temp.tcl  og.tcl  paper.bib  paper.md  plot.py  pr-example.py  pyproject.toml  q5.py  requirements.txt  run_model.py  test.sh  watch-mypy.sh  watch-push.sh
.circleci/: config.yml
OpenSees/: build_model.py  built-model.tcl  opensees-basic.py  util.py
a16-data/: rail.txt
bridge705/: README.txt  Youngs_modulus.txt  bridge-705.org  density.txt  thickness.txt
bridge_sim/: crack.py  util.py
code/: .gitattributes  README.org  abnormal_response.py  build_model.py  build_opensees_model.py  cli.py  config.py  config_sys.py  defaults.py  diana-cmd.dcf  fem.py  influence_line.py  model-template-3d.tcl  model-template.tcl  model.py  models.py  normal_load.py  normal_response.py  opensees.py  plot.py  run_model.py  run_opensees.py  run_opensees_model.py  run_plots.py  setup.py  strains_paths.tb  test.py  test_config.py  test_model.py  tmp.py  util.py
docker/: Dockerfile  Dockerfile1  Dockerfile2  Makefile.def.EC2-UBUNTU  example.py  run-lisa.sh  run-uls.sh  run.sh  sim-uls.sh  sim.sh  tzdata.sh
docs/: cli.html  crack.html  index.html  util.html
legacy/: build-latex.sh
notebooks/: classify.ipynb  concrete.ipynb  piers.ipynb  q1.ipynb  q2.ipynb  (+5 more)
(+746 files in other folders)
